<resources>
    <string name="app_name">TuRumbo</string>
    <string name="Bienvenida">TuRumbo</string>
    <string name="autor">Nicolas Obando</string>
    <string name="description_inicio">Inicia una nueva aventura con TuRumbo y descubre una nueva forma de ver el mundo</string>
    <string name="description_login">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="txt_submit_login">Ingresar</string>
    <string name="tv_recuperarContraseña">Recupera Tu Contraseña</string>
    <string name="tv_login_google">Ingresa con Google</string>
    <string name="tv_noCuenta_login">No tienes cuenta?</string>
    <string name="tv_regsitrar_login">Registrate</string>
    <string name="bt_comienzaInicio">Comienza</string>
    <string name="tv_registrateInicio">Registrate</string>
    <string name="text_btn_register">Registrarse</string>
    <string name="tv_title_register">Crear cuenta</string>
    <string name="hint_name_input">Nombres</string>
    <string name="hint_lastname_input">Apellidos</string>
    <string name="hint_password_input">Ingresa tu contraseña</string>
    <string name="hint_confirm_password_input">Confirmar contraseña</string>
    <string name="hint_email_register">Correo electrónico</string>
    <string name="tv_tiene_cuenta">¿Ya tienes cuenta?</string>
    <string name="tv_inciarSesion_register">Inicia sesión</string>
    <string name="txt_checkox_terminos_register">Acepto los términos y condiciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_mi_tienda">Mi tienda</string>
    <string name="inicio">Inicio</string>
    <string name="catalogo">Catalogo</string>
    <string name="Carrito">Carrito</string>
    <string name="Perfil">Perfil</string>
    <string name="Catalogo">Catalogo</string>
    <string name="navigation_drawer_open">Manu Abierto</string>
    <string name="navigation_drawer_close">Menu Cerrado</string>
    <string name="favoritos">Favoritos</string>
    <string name="gestion_admin">Gestion Admin</string>
    <string name="usuarios">Usuarios</string>
    <string name="productos_destacados">Productos Destacados</string>
    <string name="imagen_del_producto">Imagen del Producto</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="tv_editar_perfil">Editar Perfil</string>
    <string name="tv_actualizar">Actualizar</string>
    <string name="ingresar_con_huella">Ingresar con huella</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="editar_perfil_titulo">Editar Perfil</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="nueva_contrase_a_opcional">Nueva Contraseña (Opcional)</string>
    <string name="repetir_nueva_contrase_a">Repetir Nueva Contraseña</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
</resources>