<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".ui.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="86dp"
            android:layout_height="114dp"
            app:srcCompat="@drawable/logo_app" />

        <TextView
            android:id="@+id/nombreApp_Login"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/app_name"
            android:textAlignment="textStart"
            android:textColor="@color/rojo"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/description_login"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/tv_title_register"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="fill_vertical"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/input_names"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_marginBottom="15sp"
                android:background="@drawable/style_input"
                android:paddingStart="15dp"
                android:fontFamily="@font/tiro_devanagari_hindi"

                android:paddingEnd="15dp"
                android:ems="10"
                android:hint="@string/hint_name_input"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                />
            <EditText
                android:id="@+id/input_lastName"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:fontFamily="@font/tiro_devanagari_hindi"

                android:layout_marginBottom="15sp"
                android:background="@drawable/style_input"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:ems="10"
                android:hint="@string/hint_lastname_input"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                />

            <EditText
                android:id="@+id/input_email_register"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_marginBottom="15sp"
                android:background="@drawable/style_input"
                android:paddingStart="15dp"
                android:fontFamily="@font/tiro_devanagari_hindi"

                android:paddingEnd="15dp"
                android:ems="10"
                android:hint="@string/hint_email_register"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/input_password_register"
                android:layout_width="280dp"
                android:fontFamily="@font/tiro_devanagari_hindi"

                android:layout_height="48dp"
                android:layout_marginBottom="15sp"
                android:background="@drawable/style_input"
                android:paddingStart="15dp"
                android:hint="@string/hint_password_input"
                android:textColor="@color/black"
                android:paddingEnd="15dp"
                android:ems="10"
                android:inputType="textPassword"
                />
            <EditText
                android:id="@+id/input_confirm_password_register"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:background="@drawable/style_input"
                android:paddingStart="15dp"
                android:fontFamily="@font/tiro_devanagari_hindi"

                android:hint="@string/hint_confirm_password_input"
                android:textColor="@color/black"
                android:paddingEnd="15dp"
                android:ems="10"
                android:inputType="textPassword"
                />

            <CheckBox
                android:id="@+id/checkBox_terminos_register"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tiro_devanagari_hindi"

                android:paddingStart="0dp"
                android:text="@string/txt_checkox_terminos_register" />


        </LinearLayout>

    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button_register"
        android:layout_width="217dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/rojo"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/text_btn_register"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:gravity="center">


        <TextView
            android:id="@+id/tv_noCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/tv_tiene_cuenta"
            android:textColor="@color/black"
            android:layout_marginEnd="10sp"
            android:textSize="15dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_registrate_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/tv_inciarSesion_register"
            android:textColor="@color/rojo"
            android:textSize="15dp"
            android:textStyle="bold"
            />
    </LinearLayout>


</LinearLayout>