<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".Activities.InicioActivity">


    <TextView
        android:id="@+id/nombreApp_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/app_name"
        android:textColor="@color/rojo"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_inicio" />

    <TextView
        android:id="@+id/description_inicio"
        android:layout_width="290dp"
        android:layout_height="108dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:lineSpacingExtra="8sp"
        android:text="@string/description_inicio"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreApp_inicio" />

    <ImageView
        android:id="@+id/logo_inicio"
        android:layout_width="168dp"
        android:layout_height="275dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_app" />

    <Button
        android:id="@+id/btn_inicio"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/rojo"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:paddingTop="3dp"
        android:text="@string/bt_comienzaInicio"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_inicio" />

    <TextView
        android:id="@+id/tv_registrar_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/tv_registrateInicio"
        android:textColor="@color/rojo"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inicio" />
</androidx.constraintlayout.widget.ConstraintLayout>