<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="88dp"
        android:layout_height="120dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_app" />

    <TextView
        android:id="@+id/nombreApp_Login"
        android:layout_width="204dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="@color/rojo"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logo_login"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_login"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/description_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_input"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:paddingEnd="15dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icons_login"
        app:layout_constraintTop_toBottomOf="@+id/input_user" />

    <EditText
        android:id="@+id/input_user"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/style_input"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icons_login"
        app:layout_constraintTop_toBottomOf="@+id/description_login" />

    <ImageView
        android:id="@+id/icons_login"
        android:layout_width="76dp"
        android:layout_height="123dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_login"
        app:srcCompat="@drawable/icons_login" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="217dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/rojo"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/txt_submit_login"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/tv_recuperarContraseña_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/tv_recuperarContraseña"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <LinearLayout
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:background="@drawable/button_google_login"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recuperarContraseña_login">

        <ImageView
            android:id="@+id/logo_google"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_google" />

        <TextView
            android:id="@+id/tv_login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/tv_login_google"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_noCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/tv_noCuenta_login"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_registrate_login"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_registrate_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/tv_regsitrar_login"
        android:textColor="@color/rojo"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>